# Ginarr

./: .env.sample  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 11188687514c_update_user.py  3a87050bebf6_update_2_user.py  5137614f44d3_init3.py  528c2c8f03a3_add_memorychunk_with_source_type.py  5bf5c9f1e2f3_initial.py  9614ec4beebc_embeddingtype_memorychunk_.py  cf453c3d4c3a_embeddingtype_memorychunk_.py  ea157ce75be7_add_user_settings.py
app/api/v1/routers/: auth_router.py  ginarr_router.py  memory_router.py  oktal_router.py  search_router.py
app/api/v1/schemas/: auth_schema.py  ginarr_schema.py  memory_schema.py  oktal_schema.py  search_schema.py
app/cmd/: api.py
app/config/: settings.py
app/core/database/: db.py
app/core/i18n/: prompts.py
app/core/i18n/locales/en_US/: prompts.py
app/core/i18n/locales/ru_RU/: prompts.json  prompts.py
app/core/i18n/locales/ru_UA/: prompts.py
app/core/logger/: app_logger.py  loguru_logger.py  structlog_logger.py
app/dependencies/: auth.py
app/ginarr/: .env.ginarr.sample  agent.py  flow.md  ginarr_errors.py  graph.py  graph_state.py  settings.py
app/ginarr/llm/: allowed_routes.py  llm_provider.py  router_llm.py
app/ginarr/nodes/: check_done.py  end.py  llm.py  memorize.py  memory.py  router.py  tool.py  web_search.py
app/ginarr/tools/: universal_answer.py
app/models/: BaseEmbeddingModel.py  ChatMessage.py  EmbeddingType.py  MemoryChunk.py  OpenAIEmbedding.py  User.py  __init__.py
app/oktal/: agent.py  graph.py
app/oktal/llm/: router_llm.py
app/oktal/nodes/: memory.py  router.py  tool.py
app/services/auth/: auth_service.py  errors.py
app/services/chat/: logger.py
app/services/embedding/: embedding_errors.py  embedding_helpers.py  embedding_registry.py  embedding_service.py
app/services/embedding/backends/: base.py  openai_embedding.py  provider.py
app/services/embedding/registry/: models.py  stores.py
app/services/embedding/stores/: embedding_base_store.py  embedding_postgres_store.py
app/services/memory/: memory_errors.py  memory_service.py
app/services/search/: embedding_search.py  pg_embedding_search.py
dev-tools/: docker-compose.yml
docs/: architecture.mmd
manage_env/: clean-db.py  seed.py
manage_env/model_seeders/: embedding_type_seeder.py
