[project]
name = "oktal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "icecream>=2.1.4",
    "loguru>=0.7.3",
    "openai>=1.82.1",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
    "structlog>=25.3.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "ruff-lsp>=0.0.62",
]
